--- a/config/locales/view.ja.yml
+++ b/config/locales/view.ja.yml
@@ -17,7 +17,6 @@ ja:
   users:
     new:
       title: ユーザー登録
-      to_login_page: ログインページへ
   password_resets:
     new:
       title: パスワードリセット
@@ -26,10 +25,8 @@ ja:
   header:
     login: ログイン
     logout: ログアウト
-    signup: 新規登録
+    sign_up: 新規登録
     post_index: 投稿一覧
     create_post: 投稿する
-    bookmark_index: ブックマーク一覧
-    profile: プロフィール
     ai_combination: AI組合せ
-    mypage: マイページ
+    my_page: マイページ
