add: 画像アップロードフォームのラベルを日本語化

--- a/config/locales/activerecord.ja.yml
+++ b/config/locales/activerecord.ja.yml
@@ -9,6 +9,7 @@ ja:
         name: 名前
         password: パスワード
         password_confirmation: パスワード確認
+        avatar: プロフィール画像
       post:
         title: タイトル
         body: 本文
@@ -16,3 +17,4 @@ ja:
         appetizer: おつまみ
         alcohol_genre: お酒のジャンル
         appetizer_genre: おつまみのジャンル
+        post_image: お酒&おつまみの画像
