add: 投稿詳細ページにコメントフォーム、コメントエリア追加

--- a/config/locales/activerecord.ja.yml
+++ b/config/locales/activerecord.ja.yml
@@ -19,3 +19,5 @@ ja:
         alcohol_genre: お酒のジャンル
         appetizer_genre: おつまみのジャンル
         post_image: お酒&おつまみの画像
+      comment:
+        body: コメント
