add: マイページ作成

--- a/config/locales/view.ja.yml
+++ b/config/locales/view.ja.yml
@@ -60,6 +60,9 @@ ja:
       success: いいねしました
     destroy:
       success: いいねを解除しました
+  profiles:
+    show:
+      title: マイページ
   header:
     login: ログイン
     logout: ログアウト
