add: フラッシュメッセージを日本語化

--- a/config/locales/activerecord.ja.yml
+++ b/config/locales/activerecord.ja.yml
@@ -11,6 +11,7 @@ ja:
         password: パスワード
         password_confirmation: パスワード確認
         avatar: プロフィール画像
+        profile: プロフィール
       post:
         title: タイトル
         body: 本文
