fix: 投稿編集ページの見出しを日本語化

--- a/config/locales/view.ja.yml
+++ b/config/locales/view.ja.yml
@@ -59,6 +59,8 @@ ja:
       title: 過去の投稿一覧
     show:
       title: 投稿詳細
+    edit:
+      title: 投稿編集
     likes:
       title: いいね済み投稿一覧
   likes:
