--- a/config/locales/view.ja.yml
+++ b/config/locales/view.ja.yml
@@ -73,6 +73,9 @@ ja:
       title: マイページ
     edit:
       title: プロフィール設定
+  appetizers:
+    new:
+      title: AI組合せ
   header:
     login: ログイン
     logout: ログアウト
