add: ユーザー毎の組合せ一覧ページ作成

--- a/config/locales/view.ja.yml
+++ b/config/locales/view.ja.yml
@@ -74,6 +74,8 @@ ja:
     edit:
       title: プロフィール設定
   appetizers:
+    index:
+      user_appetizers_title: 組合せ一覧
     new:
       title: AI組合せ
     show:
