add: 組み合わせ削除機能を追加

--- a/config/locales/activerecord.ja.yml
+++ b/config/locales/activerecord.ja.yml
@@ -4,6 +4,7 @@ ja:
       user: ユーザー
       post: 投稿
       comment: コメント
+      appetizer: 組み合わせ
     attributes:
       user:
         email: メールアドレス
