update: 投稿作成フォームの変更

--- a/config/locales/activerecord.ja.yml
+++ b/config/locales/activerecord.ja.yml
@@ -20,6 +20,6 @@ ja:
         appetizer: おつまみ
         alcohol_genre: お酒のジャンル
         appetizer_genre: おつまみのジャンル
-        post_image: お酒&おつまみの画像
+        post_image: お酒&おつまみの画像（任意）
       comment:
         body: コメント
